CSS fix for cropping of images in gallery block in navis slideshow
https://github.com/INN/largo/pull/1695#issuecomment-486786765

--- a/less/inc/images.less
+++ b/less/inc/images.less
@@ -15,6 +15,19 @@
   background-size: 20%;
 }
 
-ul.wp-block-gallery {
-  list-style: none;
+.wp-block-gallery {
+  &ul {
+    list-style: none;
+    margin-left: 0;
+  }
+  &.is-cropped {
+    .blocks-gallery-imagea,
+    .blocks-gallery-item {
+      a, img {
+        height: auto;
+        -o-object-fit: scale-down;
+        object-fit: scale-down;
+      }
+    }
+  }
 }
